--- a/src/styl/site.styl
+++ b/src/styl/site.styl
@@ -115,7 +115,7 @@ $margin-mid = ($gutter * 3.5)
 $margin-large = ($gutter * 5)
 
 $font-size-basic = 16px
-$font-size-extra = 32px
+$font-size-extra = 24px
 $font-size-large = 21px
 $font-size-mid = 18px
 $font-size-small = 12px
@@ -168,7 +168,7 @@ font-sizes($font-size-basic, $font-size-extra, $font-size-large, $font-size-mid,
   $font-size-mid = 20px
   $font-size-small = 14px
 
-  grid-maker(1000px, $gutter, l)
+  grid-maker(96%, $gutter, l)
 
   space-maker($margin-micro, $margin-tiny, $margin-small, $margin-basic, $margin-mid, $margin-large)
 
@@ -178,13 +178,11 @@ font-sizes($font-size-basic, $font-size-extra, $font-size-large, $font-size-mid,
 
 @media screen and (min-width: 1280px)
 
-  grid-maker(1200px)
-
   @import 'responsive/laptop'
 
 @media screen and (min-width: 1366px)
 
-  grid-maker(1300px, false, xl)
+  grid-maker(90%, false, xl)
 
   @import 'responsive/desktop'
 
