single header-height bottom padding on exhibition archive

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -15,3 +15,7 @@ $header-height= 46px
 
 #main-content
   padding-bottom: $header-height * 2
+
+.post-type-archive-exhibition
+  #main-content
+    padding-bottom: $header-height
