--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -7,3 +7,7 @@ $header-height= 75px
 
 #main-content
   padding-bottom: $header-height * 2
+
+.post-type-archive-exhibition
+  #main-content
+    padding-bottom: $header-height
