--- a/src/styl/responsive/laptop.styl
+++ b/src/styl/responsive/laptop.styl
@@ -4,3 +4,7 @@ $header-height= 69px
 
 #main-content
   padding-bottom: $header-height * 2
+
+.post-type-archive-exhibition
+  #main-content
+    padding-bottom: $header-height
