--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -7,3 +7,7 @@ $header-height= 50px
 
 #main-content
   padding-bottom: $header-height * 2
+
+.post-type-archive-exhibition
+  #main-content
+    padding-bottom: $header-height
