style gallery descriptions grid and font sizes

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -19,3 +19,9 @@ $header-height= 46px
 .post-type-archive-exhibition
   #main-content
     padding-bottom: $header-height
+
+// ABOUT
+
+#about-galleries
+  h3
+    font-size: $font-size-basic
