--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -11,3 +11,12 @@ $header-height= 75px
 .post-type-archive-exhibition
   #main-content
     padding-bottom: $header-height
+
+// ABOUT
+
+#about-galleries
+  .grid-item
+    flex-basis: 20%
+    max-width: 20%
+  h3
+    font-size: $font-size-mid
