--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -11,3 +11,10 @@ $header-height= 50px
 .post-type-archive-exhibition
   #main-content
     padding-bottom: $header-height
+
+// ABOUT
+
+#about-galleries
+  flex-wrap: nowrap
+  h3
+    font-size: $font-size-basic
