style mailing list

--- a/src/styl/responsive/laptop.styl
+++ b/src/styl/responsive/laptop.styl
@@ -8,3 +8,11 @@ $header-height= 69px
 .post-type-archive-exhibition
   #main-content
     padding-bottom: $header-height
+
+#mailing-list-holder
+  .mc-field-group
+    flex-wrap: nowrap
+    label
+      flex: 0 1 30%
+    input
+      flex: 1 0 auto
