--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -20,3 +20,21 @@ $header-height= 75px
     max-width: 20%
   h3
     font-size: $font-size-mid
+
+#mailing-list-holder
+  padding: $margin-small $margin-basic $margin-large
+
+  .mc-field-group
+    padding: $margin-small 0
+    flex-wrap: nowrap
+    label,
+    input
+      margin-bottom: $margin-micro
+    input
+      padding: $margin-micro 0
+    div.mce_inline_error
+      margin: $margin-micro 0 0 0
+
+  input.button
+    font-size: $font-size-mid
+    margin-top: $margin-tiny
