--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -18,3 +18,20 @@ $header-height= 50px
   flex-wrap: nowrap
   h3
     font-size: $font-size-basic
+
+#mailing-list-holder
+  padding: $margin-small $margin-basic $margin-large
+
+  .mc-field-group
+    padding: $margin-small 0
+    label,
+    input
+      margin-bottom: $margin-micro
+    input
+      padding: $margin-micro 0
+    div.mce_inline_error
+      margin: $margin-micro 0 0 0
+
+  input.button
+    font-size: $font-size-mid
+    margin-top: $margin-tiny
