add about page styling, update font sizes

--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -20,7 +20,7 @@ $header-height= 50px
     font-size: $font-size-basic
 
 #mailing-list-holder
-  padding: $margin-small $margin-basic $margin-large
+  padding: $margin-small $margin-basic $margin-mid
 
   .mc-field-group
     padding: $margin-small 0
@@ -35,3 +35,8 @@ $header-height= 50px
   input.button
     font-size: $font-size-mid
     margin-top: $margin-tiny
+
+#map-holder
+  iframe
+    width: 100%
+    height: 100%
