add ratio image sizing. fix masonry layout

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -1,5 +1,8 @@
 $header-height= 46px
 
+.ratio-image
+  width: auto
+
 // HEADER
 
 #header
@@ -19,3 +22,15 @@ $header-height= 46px
 .post-type-archive-exhibition
   #main-content
     padding-bottom: $header-height
+
+// EXHIBITION
+
+.masonry-item
+  width: 100%
+  padding: 0 $margin-tiny
+  &:first-child
+    position: relative
+
+.limit-paragraph
+  p
+    max-width: 500px
