--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -11,3 +11,8 @@ $header-height= 75px
 .post-type-archive-exhibition
   #main-content
     padding-bottom: $header-height
+
+// EXHIBITION
+
+.masonry-item
+  padding: 0 $margin-tiny
