--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -11,3 +11,9 @@ $header-height= 50px
 .post-type-archive-exhibition
   #main-content
     padding-bottom: $header-height
+
+// EXHIBITION
+
+.masonry-item
+  width: 50%
+  padding: 0 $margin-tiny
