implement and style social links

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -42,6 +42,14 @@ $header-height= 50px
 svg.jump-arrow
   height: 14px
 
+svg.social-icon
+  height: 16px
+
+#about-social
+  span
+    display: inline-block
+    margin-right: $margin-small
+
 #mailing-list-holder
   padding: $margin-small $margin-basic $margin-large
   border: 1px solid
