improve font sizes. fix header item widths

--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -12,6 +12,9 @@ $header-height= 75px
   #main-content
     padding-bottom: $header-height
 
+#header-tagline
+  font-size: 13px
+
 // EXHIBITION
 
 .masonry-item
