--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -12,6 +12,9 @@ $header-height= 50px
   #main-content
     padding-bottom: $header-height
 
+#header-tagline
+  font-size: 11px
+
 // EXHIBITION
 
 .masonry-item
