--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -45,3 +45,7 @@ $header-height= 75px
   input.button
     font-size: $font-size-mid
     margin-top: $margin-tiny
+
+#map-holder
+  iframe
+    width: calc('100% - ' + $margin-small)
