--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -48,5 +48,5 @@ $header-height= 50px
 #map-holder
   iframe
     position: absolute
-    width: 100%
+    width: calc('100% - ' + $margin-small)
     height: 100%
