improve mailing list layout

--- a/src/styl/responsive/laptop.styl
+++ b/src/styl/responsive/laptop.styl
@@ -10,11 +10,14 @@ $header-height= 69px
     padding-bottom: $header-height
 
 #mailing-list-holder
-  .mc-field-group
-    label
-      flex: 0 1 30%
-    input
-      flex: 1 0 auto
+  #mc_embed_signup
+    .mc-field-group
+      label
+        flex: 0 1 30%
+      input
+        width: auto
+        max-width: auto
+        flex: 1 0 auto
 
 #header-tagline
   font-size: 14px
