--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -59,6 +59,8 @@ svg.social-icon
     background: transparent
     h2
       display: none
+    .button:hover
+      background: transparent
 
   .indicates-required
     display: none
@@ -96,3 +98,6 @@ svg.social-icon
     font-weight: bold
     cursor: pointer
     margin-top: $margin-tiny
+
+  .clear
+    text-align: center
