improve exhibition paragraph line length

--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -20,6 +20,10 @@ $header-height= 75px
 .masonry-item
   padding: 0 $margin-tiny
 
+.limit-paragraph
+  p
+    max-width: 500px
+
 // ABOUT
 
 #about-galleries
