add map min-height

--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -51,5 +51,6 @@ $header-height= 75px
     margin-top: $margin-tiny
 
 #map-holder
+  min-height: 450px
   iframe
     width: calc('100% - ' + $margin-small)
