--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -45,6 +45,7 @@ $header-height= 50px
     margin-top: $margin-tiny
 
 #map-holder
+  min-height: 400px
   iframe
     position: absolute
     width: calc('100% - ' + $margin-small)
