improve mailchimp styling

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -61,6 +61,18 @@ svg.social-icon
       display: none
     .button:hover
       background: transparent
+    #mc-embedded-subscribe-form
+      div.mce_inline_error
+        margin: $margin-micro 0 0 0
+        background: transparent
+        flex-basis: 100%
+        text-align: right
+      input.mce_inline_error
+        border-width: 1px
+    div.response
+      text-align: center
+      width: 100%
+      font-weight: 300
 
   .indicates-required
     display: none
@@ -85,10 +97,7 @@ svg.social-icon
       flex: 0 1 100%
       font-size: $font-size-mid
       padding: $margin-micro 0
-    div.mce_inline_error
-      margin: $margin-micro 0 0 0
-      background: transparent
-      flex-basis: 100%
+      border-radius: 0
 
   input.button
     appearance: none
