--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -36,6 +36,13 @@ $header-height= 75px
 #mailing-list-holder
   padding: $margin-small $margin-basic $margin-large
 
+  #mc_embed_signup
+    #mc-embedded-subscribe-form
+      div.mce_inline_error
+        margin: $margin-micro 0 0 0
+        background: transparent
+        flex-basis: 100%
+
   .mc-field-group
     padding: $margin-small 0
     label,
