--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -30,6 +30,14 @@ $header-height= 50px
 #mailing-list-holder
   padding: $margin-small $margin-basic $margin-mid
 
+  #mc_embed_signup
+    #mc-embedded-subscribe-form
+      div.mce_inline_error
+        margin: $margin-micro 0 0 0
+        background: transparent
+        flex-basis: 100%
+
+
   .mc-field-group
     padding: $margin-small 0
     label,
